projects/cms/master-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: master
  name: master-svc
spec:
  ports:
    - port: 8014
      protocol: TCP
      targetPort: 8014
  selector:
    app: master
